[gd_scene load_steps=6 format=3 uid="uid://crinoxwgj5hyu"]

[ext_resource type="Script" uid="uid://bb0pmnt3gsnyn" path="res://Scripts/ui/victory_screen.gd" id="1_mubwb"]
[ext_resource type="Shader" uid="uid://dfhvpjjx38han" path="res://Assets/Shaders/blur.gdshader" id="1_oq8vb"]
[ext_resource type="PackedScene" uid="uid://dfixw0merhgge" path="res://Scenes/card.tscn" id="3_fmvqe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jb6in"]
shader = ExtResource("1_oq8vb")
shader_parameter/amount = 2.265

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0gua7"]
bg_color = Color(0.065224, 0.0241953, 0.00326082, 1)

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mubwb")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_jb6in")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 425)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0gua7")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "YOU'VE CLEANSED YOUR FOES"
horizontal_alignment = 1

[node name="CoinRewardLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Coins Earned: 10"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 27

[node name="SelectCardLabel" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Select a New Card"
horizontal_alignment = 1

[node name="CardContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Card" parent="Panel/VBoxContainer/VBoxContainer/CardContainer" instance=ExtResource("3_fmvqe")]
layout_mode = 2
is_reward = true

[node name="Card2" parent="Panel/VBoxContainer/VBoxContainer/CardContainer" instance=ExtResource("3_fmvqe")]
layout_mode = 2
is_reward = true

[node name="Card3" parent="Panel/VBoxContainer/VBoxContainer/CardContainer" instance=ExtResource("3_fmvqe")]
layout_mode = 2
is_reward = true

[node name="NoneButton" type="Button" parent="Panel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "None"

[node name="ContinueButton" type="Button" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.5
offset_top = -31.0
offset_right = 73.5
grow_horizontal = 2
grow_vertical = 0
text = "CONTINUE"

[connection signal="pressed" from="Panel/VBoxContainer/VBoxContainer/NoneButton" to="." method="show_continue"]
[connection signal="pressed" from="Panel/ContinueButton" to="." method="_on_return_button_pressed"]
